--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
             .when('/trang-chu', {templateUrl : './mon-hoc.html'})
             .when('/gioi-thieu', {templateUrl : './gioi-thieu.html'})
             .when('/lien-he', {templateUrl : './lien-he.html'})
-            .when('/hoi-dap', {templateUrl : './hoi-dap.html'})
+            .when('/hoi-dap', {
+                templateUrl : './hoi-dap.html',
+                controller : 'faq'
+            })
             .when('/gop-y', {templateUrl : './gop-y.html'})
             .when('/dang-ky', {
                 templateUrl : './dang-ky.html',
@@ -265,6 +268,20 @@
             );
         });
     </script>
+
+    <script>
+        app.controller('faq', function ($scope) {
+            $scope.noiDung = '';
+            $scope.btnSendMail = function () {
+                var url = 
+                        'https://mail.google.com/mail/u/0/?view=cm&to=vinhlmpc01238@fpt.edu.vn' +
+                        '&su=' + encodeURI('Hỏi đáp | Online Traing') +
+                        '&body=' + encodeURI($scope.noiDung);
+                window.open(url, '_blank', 'height=400,width=500');
+            };
+        });
+    </script>
+
     <script src="./js/module/trac-nghiem.js"></script>
     <script src="./js/module/dang-nhap.js"></script>
     <script src="./js/module/dang-ky.js"></script>
