--- a/index.html
+++ b/index.html
@@ -133,211 +133,9 @@
 
     <script src="./js/angular.js"></script>
     <script src="./js/angular-route.js"></script>
-    <script>
-        var app = angular.module('myApp', ['ngRoute']);
-        app.config($routeProvider => {
-            $routeProvider
-            .when('/trang-chu', {templateUrl : './mon-hoc.html'})
-            .when('/gioi-thieu', {templateUrl : './gioi-thieu.html'})
-            .when('/lien-he', {templateUrl : './lien-he.html'})
-            .when('/hoi-dap', {
-                templateUrl : './hoi-dap.html',
-                controller : 'faq'
-            })
-            .when('/gop-y', {
-                templateUrl : './gop-y.html',
-                controller : 'agr'
-            })
-            .when('/dang-ky', {
-                templateUrl : './dang-ky.html',
-                controller: 'sgUp'
-            })
-            .when('/dang-nhap', {
-                templateUrl : './dang-nhap.html',
-                controller: 'lgCtrl'
-            })
-            .when('/quen-mat-khau', {templateUrl : './quen-mat-khau.html'})
-            .when('/doi-mat-khau', {
-                templateUrl : './doi-mat-khau.html',
-                controller : 'repas'
-            })
-            .when('/sua-tai-khoan', {templateUrl : './sua-tai-khoan.html'})
-            .when('/trac-nghiem/:idMonHoc', {
-                templateUrl :  './trac-nghiem.html',
-                controller : 'trng'
-            })
-            .when('/lich-su', {
-                templateUrl :  './histo.html',
-                controller : 'histo'
-            })
-            .otherwise({templateUrl: './mon-hoc.html'});
-        });
-
-        app.controller('myCtrl', ($scope, $http) => {
-            //Kiểm tra đăng nhập hay chưa
-            $scope.username = '';
-            $scope.isLogin = '';
-            document.cookie.split('; ').forEach(item => {
-                if (item.startsWith('Username')){
-                    $scope.username = (item.substring(item.indexOf('=') + 1));
-                }
-                if (item.startsWith('LoginId')){
-                    $scope.isLogin = (item.substring(item.indexOf('=') + 1));
-                }
-            });
-            
-            $scope.logout = function () {
-                document.cookie = 'LoginId=null;expires=' + new Date(0) + ';path=/';
-                // document.cookie = 'User=null;expires=' + new Date(0) + ';path=/';
-                // document.cookie = 'Pass=null;expires=' + new Date(0) + ';path=/';
-                document.cookie = 'Username=null;expires=' + new Date(0) + ';path=/';
-                document.location = '/';
-            };
-
-            $http.get('http://localhost:3000/subjects').then(
-                response => {
-                    $scope.asideA = response.data;
-                },
-                error => {
-                    alert('Không thể kết nối đến cơ sỡ dữ liệu');
-                }
-            );
-        });
-    </script>
-
-    <script>
-        app.controller('histo', function ($scope, $http) {
-            $scope.histoShow = [];
-            $scope.infes = [];
-            $scope.lengthPage = 1;
-            //Kiểm tra đăng nhập hay chưa
-            $scope.username = '';
-            $scope.isLogin = '';
-            document.cookie.split('; ').forEach(item => {
-                if (item.startsWith('Username')){
-                    $scope.username = (item.substring(item.indexOf('=') + 1));
-                }
-                if (item.startsWith('LoginId')){
-                    $scope.isLogin = (item.substring(item.indexOf('=') + 1));
-                }
-            });
-            $http.get('http://localhost:3000/histo?idUser=' + $scope.isLogin + '&_sort=id&_order=desc')
-            .then(
-                response => {
-                    response.data.forEach(item => {
-                        let detalT = (new Date(item.end).getTime() - new Date(item.start).getTime()) / 1000;
-
-                        var info = {
-                            start: item.start,
-                            end: item.end,
-                            detalTime : detalT
-                        };
-                        $http.get('http://localhost:3000/subjects/'+item.idSubject)
-                        .then(
-                            rs => {
-                                info.nameSubject = rs.data.name;
-                                $scope.infes.push(angular.copy(info));
-                            }
-                        );
-
-                        var listData = [];
-                        item.histo.forEach(itemHisto => {
-                            var showData = {
-                                note: ''
-                            };
-                            showData.id = itemHisto.id;
-                            showData.quest = itemHisto.text;
-                            showData.myAnswer = itemHisto.answers.reduce((non, itemAnswers) => {
-                                if (itemAnswers.id == itemHisto.pick_answer_id){
-                                    return itemAnswers.text;
-                                }
-                                return non;
-                            }, '');
-                            showData.status = itemHisto.answer_id == itemHisto.pick_answer_id;
-                            if (!showData.status) {
-                                showData.note = itemHisto.answers.reduce((non, itemAnswers) => {
-                                    if (itemAnswers.id == itemHisto.answer_id){
-                                        return itemAnswers.text;
-                                    }
-                                    return non;
-                                }, '');
-                            }
-                            listData.push(angular.copy(showData));
-                        });
-                        $scope.histoShow.push(angular.copy(listData));
-                        $scope.lengthPage = $scope.histoShow.length;
-                    });
-                },
-                error => {
-                    alert('Không thể kết nối đến cơ sở dữ liệu');
-                }
-            );
-        });
-    </script>
-    <script>
-        app.controller('repas', function ($scope, $http) {
-            document.cookie.split('; ').forEach(item => {
-                if (item.startsWith('Username')){
-                    $scope.usernameRp = (item.substring(item.indexOf('=') + 1));
-                }
-            });
-            $scope.newpass1Rp = '';
-            $scope.newpass2Rp = '';
-            $scope.passRp = '';
-            $scope.messRp = '';
-
-            $scope.updatePs = function () {
-                $scope.messRp = '';
-                if ($scope.newpass1Rp.trim().length == 0){
-                    $scope.messRp = 'Vui lòng nhập vào mật khẩu mới';
-                    return;
-                }
-
-                if ($scope.newpass1Rp != $scope.newpass2Rp){
-                    $scope.messRp = 'Mật khẩu mới không khớp';
-                    return;
-                }
-
-                var user = $scope.usernameRp;
-                var pass = $scope.passRp;
-
-                $http.get('http://localhost:3000/user?username='+user+'&password='+pass)
-                .then(
-                    response => {
-                        console.log(response.data)
-                        var dataResponse = response.data;
-
-                        if(dataResponse.length == 0){
-                            $scope.messRp = 'Sai tài khoản hoặc mật khẩu';
-                            return;
-                        }
-
-                        var userObj = response.data[0];
-                        userObj.password = $scope.newpass1Rp;
-
-                        $http.put('http://localhost:3000/user/'+userObj.id, userObj)
-                        .then(
-                            response => {
-                                document.cookie = 'LoginId=null;expires=' + new Date(0) + ';path=/';
-                                document.cookie = 'User=null;expires=' + new Date(0) + ';path=/';
-                                document.cookie = 'Pass=null;expires=' + new Date(0) + ';path=/';
-                                document.cookie = 'Username=null;expires=' + new Date(0) + ';path=/';
-                                window.location = "/#!dang-nhap";
-                            },
-                            error => {
-                                console.log(error);
-                                alert('Không thể kết nối đến cơ sỡ dữ liệu');
-                            }
-                        );
-                    },
-                    error => {
-                        alert('Không thể kết nối đến cơ sỡ dữ liệu');
-                    }
-                );
-            }
-        });
-    </script>
-
+    <script src="./js/module/index.js"></script>
+    <script src="./js/module/repass.js"></script>
+    <script src="./js/module/histo.js"></script>
     <script src="./js/module/hoi-dap.js"></script>
     <script src="./js/module/gop-y.js"></script>
     <script src="./js/module/trac-nghiem.js"></script>
