--- a/lien-he.html
+++ b/lien-he.html
@@ -1,4 +1,4 @@
-<form class="mt-3" method="get" name="lienHe">
+<form class="mb-3" method="get" name="lienHe">
     <div class="card card-header bg-light text-primary">
         <b class="bi bi-phone-fill"> LIÊN HỆ</b>
     </div>
