sửa lỗi linh tinh (chốt gd3)

--- a/mon-hoc.html
+++ b/mon-hoc.html
@@ -1,5 +1,5 @@
 <div class="card card-header bg-light text-primary">
-    <b class="bi bi-book-fill"> Danh sách môn học</b>
+    <b class="text-uppercase bi bi-book-fill"> Danh sách môn học</b>
 </div>
 <div class="card card-body">
     <div class="row w-100 mx-0 p-0 pt-3 bg-white">
