sửa thông tin (chưa hoàn chỉnh)

--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@
     <script src="./js/module/trac-nghiem.js"></script>
     <script src="./js/module/dang-nhap.js"></script>
     <script src="./js/module/dang-ky.js"></script>
+    <script src="./js/module/profile.js"></script>
 </body>
 </html>
