--- a/trac-nghiem.html
+++ b/trac-nghiem.html
@@ -32,6 +32,9 @@
     <div class="card card-header text-primary">
         <b class="bi bi-book-half">
             Đáp án đã chọn
+            <span class="bi bi-alarm-fill position-absolute" style="right: 1rem;">
+                {{(dongHo / 60) | number : 2}} phút
+            </span>
         </b>
     </div>
     <table class="table table-bordered table-hover w-100">
