--- a/sua-tai-khoan.html
+++ b/sua-tai-khoan.html
@@ -8,11 +8,11 @@
             <div class="row">
                 <div class="form-group col-12 col-md-6">
                     <label class="text-uppercase mt-2">Tên tài khoản:</label>
-                    <input type="text" class="form-control" ng-model="usernameRp">
+                    <input type="text" class="form-control" ng-model="usernameRp" readonly>
                 </div>
                 <div class="form-group col-12 col-md-6">
                     <label class="text-uppercase mt-2">Mật khẩu hiện tại:</label>
-                    <input type="text" class="form-control" ng-model="passRp">
+                    <input type="text" class="form-control" ng-model="passRp" readonly>
                 </div>
             </div>
             <div class="row">
